--- a/templates/poll.html
+++ b/templates/poll.html
@@ -48,7 +48,20 @@
 <form class="form-horizontal">
         <fieldset>
           <legend>Preguntas</legend>
-          {% for q in questions %}
+          {% csrf_token %}
+            {% for field in form %}
+                <div class="control-group">
+                    {{ field.errors }}
+                    <div class="control-label">
+                    {{ field.label_tag }}
+                    </div>
+
+                    <div class="controls">
+                        {{ field }}
+                    </div>
+                </div>
+            {% endfor %}
+{#           {% for q in questions %}
               {% ifequal q.type 'M' %}
                   <div class="control-group">
                     <label class="control-label" for="select01"> {{ q.text }} </label>
@@ -82,7 +95,9 @@
           </div>
 
               {% endifequal %}
-          {% endfor %}
+          {% endfor %} #}
+
+
 
           <div class="form-actions">
             <button type="submit" class="btn btn-success btn-large">Enviar</button>
