--- a/templates/poll.html
+++ b/templates/poll.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Two Colmuns</title>
+<title>Poll</title>
 {% load staticfiles %}
 <link rel="stylesheet" href={% static "css/bootstrap/css/bootstrap.css" %} type="text/css">
   <style type="text/css">
@@ -45,7 +45,7 @@
 
   </div>
   <div class="span7 well">
-<form class="form-horizontal">
+<form class="form-horizontal" method="post">
         <fieldset>
           <legend>Preguntas</legend>
           {% csrf_token %}
