--- a/templates/registered.html
+++ b/templates/registered.html
@@ -5,15 +5,8 @@
     <title>Thanks!</title>
     {% load staticfiles %}
     <link rel="stylesheet" href={% static "css/bootstrap/css/bootstrap.css" %} type="text/css">
-    <style type="text/css">
-    body {color: #E0E0E0; margin: 70px;}
-    legend {color: #E0E0E0;}
-    label {color: #E0E0E0;}
-    .navbar-inner { min-height: 50px;}
-    p.spaced {
-        line-height: 23px
-    }
-    </style>
+    <link rel="stylesheet" href={% static "css/changes.css" %} type="text/css">
+    <style type="text/css"></style>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
