--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -5,15 +5,8 @@
     <title>Thanks!</title>
     {% load staticfiles %}
     <link rel="stylesheet" href={% static "css/bootstrap/css/bootstrap.css" %} type="text/css">
-    <style type="text/css">
-    body {color: #E0E0E0; margin: 70px;}
-    legend {color: #E0E0E0;}
-    label {color: #E0E0E0;}
-    .navbar-inner { min-height: 50px;}
-    p.spaced {
-        line-height: 23px
-    }
-    </style>
+    <link rel="stylesheet" href={% static "css/changes.css" %} type="text/css">
+    <style type="text/css"></style>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -50,7 +43,7 @@
                             {% csrf_token %}
                             {{ form.email.errors }}
                             {{ form.email }}
-                            {# <input type="text" class="input" placeholder="Email"> #}
+                            {# <input type="text" class="input" placeholder="Email">#}
                             <button type="submit" class="btn">Enviar</button>
                         </form>
                     </li>
@@ -62,7 +55,7 @@
                         Puedes añadir la pagina
                         <a>Status</a>
                         a tus favoritos y revisarla de vez en cuando para
-                saber el status de nuestra iniciativa
+                        saber el status de nuestra iniciativa
                     </li>
                 </ol>
             </div>
