--- a/templates/poll.html
+++ b/templates/poll.html
@@ -5,13 +5,13 @@
 <title>Poll</title>
 {% load staticfiles %}
 <link rel="stylesheet" href={% static "css/bootstrap/css/bootstrap.css" %} type="text/css">
-<link rel="stylesheet" href={% static "css/changes.css" %} type="text/css">
+{# <link rel="stylesheet" href={% static "css/changes.css" %} type="text/css"> #}
   <style type="text/css">
-
+body { margin: 70px;}
   </style>
 </head>
 <body>
- <div class="navbar navbar-inverse navbar-fixed-top">
+ <div class="navbar navbar-fixed-top">
    <div class="navbar-inner">
      <div class="container">
        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -105,5 +105,7 @@
     </div>
 </div>
 </div>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
