--- a/templates/registered.html
+++ b/templates/registered.html
@@ -30,5 +30,7 @@
             </div>
         </div>
     </div>
+        <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
