--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -61,5 +61,8 @@
             </div>
         </div>
     </div>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
