--- a/templates/poll.html
+++ b/templates/poll.html
@@ -1,110 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Poll</title>
-{% load staticfiles %}
-<link rel="stylesheet" href={% static "css/bootstrap/css/bootstrap.css" %} type="text/css">
-{# <link rel="stylesheet" href={% static "css/changes.css" %} type="text/css"> #}
-  <style type="text/css">
-body { margin: 70px;}
-  </style>
+    <meta charset="utf-8">
+    <title>Poll</title>
+    {% load staticfiles %}
+    <link rel="stylesheet" href={% static "css/bootstrap/css/bootstrap.css" %} type="text/css">
+    {#
+    <link rel="stylesheet" href={% static "css/changes.css" %} type="text/css">
+    #}
+    <style type="text/css">body { margin: 70px;}</style>
 </head>
 <body>
- <div class="navbar navbar-fixed-top">
-   <div class="navbar-inner">
-     <div class="container">
-       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-       </a>
-       <a class="brand" href="../">Psidium Project</a>
-       <div class="nav-collapse" id="main-menu">
-
-       </div>
-     </div>
-   </div>
- </div>
- <div class="container">
-  <div class="row">
-  <div class="span3 well">
-                <p class="spaced">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent elementum leo id libero pellentesque suscipit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec et accumsan justo. Ut sed diam a odio placerat posuere eget id eros. Sed vestibulum porta tellus, sit amet congue nisl lobortis vitae. Aliquam erat volutpat. Vestibulum sem orci, euismod nec dignissim vitae, varius at risus. Integer vel purus nisi. Nullam viverra sapien neque. </p>
-
-            <p class="spaced">
-            Donec scelerisque gravida ultrices. Nulla facilisi. Donec fringilla massa non quam vestibulum bibendum. Nam auctor, nunc non aliquam tempor, neque erat gravida sem, in dignissim nulla nibh ac eros. In quis enim non ante accumsan dictum. Nam quis lacus tortor. Nunc ac lacus gravida felis lobortis ultricies vel ac mauris. Fusce semper rutrum nulla id hendrerit. Vivamus vitae nunc urna, nec pharetra erat. </p>
-
-            <p class="spaced">
-            Etiam volutpat ornare libero eget commodo. Sed augue justo, tincidunt sed gravida ac, sollicitudin in nisi. Nulla sed tristique nulla. Etiam vitae sapien tellus. Quisque at mi sit amet risus rutrum mollis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aenean quis lorem turpis.</p>
-
-  </div>
-  <div class="span7 well">
-<form class="form-horizontal" method="post">
-        <fieldset>
-          <legend>Preguntas</legend>
-          {% csrf_token %}
-            {% for field in form %}
-                <div class="control-group">
-                    {{ field.errors }}
-                    <div class="control-label">
-                    {{ field.label_tag }}
-                    </div>
-
-                    <div class="controls">
-                        {{ field }}
-                    </div>
-                </div>
-            {% endfor %}
-            {% comment %}
-            {% for q in questions %}
-              {% ifequal q.type 'M' %}
-                  <div class="control-group">
-                    <label class="control-label" for="select01"> {{ q.text }} </label>
-                    <div class="controls">
-                      <select id="select01">
-                        <option></option>
-                        {% for o in q.options %}
-                            <option>{{ o }}</option>
-                        {% endfor %}
-                      </select>
-                </div>
-              </div>
-              {% endifequal %}
-
-              {% ifequal q.type 'I' %}
-                  <div class="control-group">
-                    <label class="control-label" for="input01">{{ q.text }}</label>
-                    <div class="controls">
-                      <input type="text" class="input-xlarge" id="input01">
-                    </div>
-                  </div>
-              {% endifequal %}
-
-              {% ifequal q.type 'T' %}
-
-          <div class="control-group">
-            <label class="control-label" for="textarea">{{ q.text }}</label>
-            <div class="controls">
-              <textarea class="input-xlarge" id="textarea" rows="3"></textarea>
+    <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <a class="brand" href="../">Psidium Project</a>
+                <div class="nav-collapse" id="main-menu"></div>
             </div>
-          </div>
-
-              {% endifequal %}
-          {% endfor %}
-          {% endcomment %}
-
-
-
-          <div class="form-actions">
-            <button type="submit" class="btn btn-success btn-large">Enviar</button>
-          </div>
-        </fieldset>
-      </form>
-
+        </div>
     </div>
-</div>
-</div>
+    <div class="container">
+        <div class="hero-unit">
+            <h1>Gracias por estar aqui!</h1>
+            <h2>Necesitamos solo un minuto de tu tiempo</h2>
+
+            <p class="lead">
+                El objetivo de esta encuesta es conocer cuales son los principales problemas
+        que afectan el desempeño de los profesionales del derecho
+            </p>
+            <p class="lead">
+                Creemos que este colectivo no ha sido atendido bien por el mundo tecnologico
+            y quisieramos con esta informacion dar los primeros pasos hacia el desarrollo
+            de una herramienta moderna que facilite el trabajo diario en los despachos
+            </p>
+
+        </div>
+        <div class="row-fluid">
+            <div class="span8 offset2 well">
+                <form class="form-horizontal" method="post">
+                    <fieldset>
+                        <legend>Preguntas</legend>
+                        {% csrf_token %}
+                        {% for field in form %}
+                        <div class="control-group">
+                            {{ field.errors }}
+                            <div class="control-label">{{ field.label_tag }}</div>
+                            <div class="controls">{{ field }}</div>
+                        </div>
+                        {% endfor %}
+                        <div class="form-actions">
+                            <button type="submit" class="btn btn-success btn-large">Enviar</button>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+    </div>
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
