--- a/templates/registered.html
+++ b/templates/registered.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Thanks!</title>
     {% load staticfiles %}
-    <link rel="stylesheet" href={% static "css/bootstrap/css/bootstrap.css" %} type="text/css">
+    <link rel="stylesheet" href={% static "css/bootstrap.css" %} type="text/css">
     <link rel="stylesheet" href={% static "css/changes.css" %} type="text/css">
     <style type="text/css"></style>
 </head>
