--- a/templates/status.html
+++ b/templates/status.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Email registrado!</title>
+    <title>Status</title>
     {% load staticfiles %}
     <link rel="stylesheet" href={% static "css/bootstrap.css" %} type="text/css">
     <link rel="stylesheet" href={% static "css/changes.css" %} type="text/css">
@@ -25,8 +25,10 @@
     <div class="container">
         <div class="row">
             <div class="span7 well">
-                <h2>Hemos registrado tu direccion de correo</h2>
-                No te enviaremos spam, lo juramos.
+                <h1>Status: <span style="color: #DC9B31;">En desarrollo</span></h1>
+                Muchas gracias por tu interes.
+
+
             </div>
         </div>
     </div>
