--- a/templates/poll.html
+++ b/templates/poll.html
@@ -39,8 +39,9 @@
             <p >
                 Te aseguramos que esta encuesta es <strong>completamente anónima</strong>.
             </p>
+            <p>Tu aporte es increiblemente <strong>valioso</strong> para nosotros.</p>
             <p >
-                No es necesario que contestes todas las preguntas. Tu aporte es muy <strong>valioso</strong> para nosotros por pequeño que sea.
+                <strong>No es necesario que contestes todas las preguntas.</strong>
             </p>
         </div>
         {% if form.errors %}
