--- a/templates/registered.html
+++ b/templates/registered.html
@@ -25,8 +25,8 @@
     <div class="container">
         <div class="row">
             <div class="span7 well">
-                <h2>Hemos registrado tu direccion de correo</h2>
-                No te enviaremos spam, lo juramos.
+                <h2>Hemos registrado tu dirección de correo exitosamente</h2>
+                No te enviaremos spam ni facilitaremos tu correo a ningun tercero, lo juramos.
             </div>
         </div>
     </div>
