--- a/templates/status.html
+++ b/templates/status.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="span7 well">
                 <h1>Status: <span style="color: #DC9B31;">En desarrollo</span></h1>
-                Muchas gracias por tu interes.
+                Muchas gracias por tu interés.
 
 
             </div>
