--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -24,18 +24,16 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="span7 well">
-                <h2>Gracias por participar!</h2>
-                <br>
-                <h3>Tu aporte es increiblemente valioso para nuestro proyecto</h3>
+            <div class="span7 well spaced">
+                <h2>¡Gracias por participar!</h2>
                 <br>
                 Si te interesa, y en caso de que nuestra iniciativa resulte en un proyecto que
-                resuelva algunas de las inquitudes que nos planteaste nos gustaría tener alguna
-                manera de contactarte.
+                resuelva algunas de las inquitudes que nos planteaste, nos gustaría poder contactarte.
+                <br>
                 Para eso tenemos tres opciones:
                 <ol>
-                    <li>
-                        Nos puedes facilitar tu correo electrónico (te prometemos que solo te escribiremos una vez en caso de que el proyecto despegue y que nunca lo facilitaremos a ningún tercero)
+                    <li class="spaced">
+                        Nos puedes facilitar tu correo electrónico (te prometemos que solo te escribiremos una vez en caso de que el proyecto despegue y que nunca lo facilitaremos a ningún tercero).
                         <br>
                         <br>
 
@@ -46,15 +44,15 @@
                             <button type="submit" class="btn btn-primary">Enviar »</button>
                         </form>
                     </li>
-                    <li>
-                        Te puedes subscribir a la cuenta de twitter @proyecto_psidium y asi mantendras el control de
-                        tu comunicación con nosotros, de nuevo, solo utilizaremos esta cuenta para anunciar el lanzamiento de nuestro proyecto. 0% Spam.
+                    <li class="spaced">
+                        Te puedes subscribir a la cuenta de twitter @psidium_project y asi mantendrás el control de
+                        tu comunicación con nosotros. De nuevo, sólo utilizaremos esta cuenta para anunciar el lanzamiento de nuestro proyecto: 0% Spam.
                     </li>
-                    <li>
-                        Puedes añadir la pagina
+                    <li class="spaced">
+                        Puedes añadir la página
                         <a href={% url main.views.status %}>Status</a>
                         a tus favoritos y revisarla de vez en cuando para
-                        saber el status de nuestra iniciativa
+                        saber el status de nuestra iniciativa.
                     </li>
                 </ol>
             </div>
