Minor fixes, raised number of workers

--- a/templates/poll.html
+++ b/templates/poll.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Poll</title>
+    <title>Encuesta</title>
     {% load staticfiles %}
     <link rel="stylesheet" href={% static "css/bootstrap.css" %} type="text/css">
     <link rel="stylesheet" href={% static "css/changes.css" %} type="text/css">
@@ -52,7 +52,7 @@
             <p >
                 Te aseguramos que esta encuesta es <strong>completamente anónima</strong>.
             </p>
-            <p>Tu aporte es increiblemente <strong>valioso</strong> para nosotros.</p>
+            <p>Tu aporte es increíblemente <strong>valioso</strong> para nosotros.</p>
             <p >
                 <strong>No es necesario que contestes todas las preguntas.</strong>
             </p>
