Added support for translation

--- a/templates/poll.html
+++ b/templates/poll.html
@@ -23,6 +23,7 @@
 </script>
 </head>
 <body>
+    {% load i18n %}
     <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container">
@@ -40,19 +41,16 @@
         <div class="hero-unit">
             <h1>¡Gracias por estar aquí!</h1>
             <h2 style="color: #DC9B31;">Necesitamos sólo un minuto de tu tiempo</h2>
-
-            <p >
-                <strong>Queremos</strong> conocer cuales son los principales problemas
-        que afectan el desempeño de los profesionales del derecho.
+            <p > <strong>Queremos</strong> conocer cuales son los principales problemas que afectan el desempeño de los profesionales del derecho.
             </p>
-            <p >
-                <strong>Creemos</strong> que haciendo uso de la tecnología podemos
-                proporcionar herramentas innovadoras que te ayuden a resolverlos.
+            <p > <strong>Creemos</strong> que haciendo uso de la tecnología podemos proporcionar herramentas innovadoras que te ayuden a resolverlos.
             </p>
             <p >
                 Te aseguramos que esta encuesta es <strong>completamente anónima</strong>.
             </p>
-            <p>Tu aporte es increíblemente <strong>valioso</strong> para nosotros.</p>
+            <p>
+                Tu aporte es increíblemente <strong>valioso</strong> para nosotros.
+            </p>
             <p >
                 <strong>No es necesario que contestes todas las preguntas.</strong>
             </p>
