all texts are tanslatable. Trans is off until translations are done

--- a/main/templates/status.html
+++ b/main/templates/status.html
@@ -8,8 +8,8 @@
 {% block contents %}
     <div class="row">
         <div class="span7 well">
-            <h1>Status: <span style="color: #DC9B31;">En desarrollo</span></h1>
-            Muchas gracias por tu interés.
+            <h1>{% trans "Status: " %}<span style="color: #DC9B31;">{% trans "En desarrollo" %}</span></h1>
+            {% trans "Muchas gracias por tu interés." %}
         </div>
     </div>
 {% endblock contents %}
