--- a/main/templates/poll.html
+++ b/main/templates/poll.html
@@ -7,26 +7,29 @@
 {% block contents %}
 
 <div class="hero-unit">
-    <h1>¡Gracias por estar aquí!</h1>
-    <h2 style="color: #DC9B31;">Necesitamos sólo un minuto de tu tiempo</h2>
-    <p > <strong>Queremos</strong> conocer cuales son los principales problemas que afectan el desempeño de los profesionales del derecho.
+
+    <h1>{% trans "¡Gracias por estar aquí!" %}</h1>
+
+    <h2 style="color: #DC9B31;">{% trans "Necesitamos sólo un minuto de tu tiempo" %}</h2>
+    <p > <strong>{% trans "Queremos" %}</strong>{% trans " conocer cuales son los principales problemas que afectan el desempeño de los profesionales del derecho." %}
     </p>
-    <p > <strong>Creemos</strong> que haciendo uso de la tecnología podemos proporcionar herramentas innovadoras que te ayuden a resolverlos.
+    <p > <strong>{% trans "Creemos" %}</strong>{% trans " que haciendo uso de la tecnología podemos proporcionar herramentas innovadoras que te ayuden a resolverlos" %}.
     </p>
-    <p >
-        Te aseguramos que esta encuesta es <strong>completamente anónima</strong>.
+    <p >{% trans "Te aseguramos que esta encuesta es " %}
+        <strong>{% trans "completamente anónima" %}</strong>.
     </p>
     <p>
-        Tu aporte es increíblemente <strong>valioso</strong> para nosotros.
+        {% trans "Tu aporte es increíblemente " %}<strong>{% trans "valioso" %}</strong>{% trans " para nosotros." %}
     </p>
     <p >
-        <strong>No es necesario que contestes todas las preguntas.</strong>
+        <strong>{% trans "No es necesario que contestes todas las preguntas." %}</strong>
     </p>
+
 </div>
 {% if form.errors %}
 <div class="alert alert-block alert-error">
   <button type="button" class="close" data-dismiss="alert">×</button>
-  <strong>Debes corregir uno de los campos de la encuesta</strong>
+  <strong>{% trans "Debes corregir uno de los campos de la encuesta" %}</strong>
 </div>
 {% endif %}
 <div class="row-fluid well">
@@ -100,7 +103,7 @@
                     <div class="controls">{{ form.q10 }}</div>
                 </div>
                 <div class="form-actions">
-                    <button type="submit" class="btn btn-large btn-block btn-primary">Enviar »</button>
+                    <button type="submit" class="btn btn-large btn-block btn-primary">{% trans "Enviar " %}»</button>
                 </div>
             </fieldset>
 
