--- a/main/templates/registered.html
+++ b/main/templates/registered.html
@@ -8,8 +8,8 @@
 {% block contents %}
     <div class="row">
     <div class="span7 well">
-        <h2>Hemos registrado tu dirección de correo exitosamente</h2>
-        No te enviaremos spam ni facilitaremos tu correo a ningun tercero, lo juramos.
+        <h2>{% trans "Hemos registrado tu dirección de correo exitosamente" %}</h2>
+        {% trans "No te enviaremos spam ni facilitaremos tu correo a ningun tercero, lo juramos." %}
     </div>
     </div>
 {% endblock contents %}
