--- a/main/templates/thanks.html
+++ b/main/templates/thanks.html
@@ -10,7 +10,7 @@
         <div class="span7 well spaced">
             <h2>{% trans "¡Gracias por participar!" %}</h2>
             <br>
-            {% trans "Si te interesa, y en caso de que nuestra iniciativa resulte en un proyecto que resuelva algunas de las inquitudes que nos planteaste, nos gustaría poder contactarte." %}
+            {% trans "Si te interesa, y en caso de que nuestra iniciativa resulte en un producto que resuelva algunas de las inquitudes que nos planteaste, nos gustaría poder contactarte." %}
             <br>
             {% trans "Para eso tenemos tres opciones:" %}
             <ol>
