--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,6 +34,9 @@
                 </a>
                 <a class="brand" href="../">Psidium Project</a>
                 <div class="nav-collapse" id="main-menu"></div>
+                {% block lang_selector %}
+                {% endblock lang_selector %}
+
             </div>
         </div>
     </div>
