--- a/main/templates/poll.html
+++ b/main/templates/poll.html
@@ -4,6 +4,29 @@
     {% trans "Encuesta" %}
 {% endblock title %}
 
+{% block lang_selector %}
+<ul class="nav pull-right">
+    <li class="dropdown">
+        <a style="color: #DC9B31;" href="#" class="dropdown-toggle" data-toggle="dropdown">
+            {% trans "Idioma" %} <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu">
+            {% for lang in LANGUAGES %}
+            <li>
+                <form name="setLang{{ lang.1}}" action="/i18n/setlang/" method="POST">
+                    {% csrf_token %}
+                    <input name="next" type="hidden" value="/" />
+                    <input style="color: #DC9B31;" type="hidden" name="language" value="{{ lang.0 }}" />
+                    <a style="color: #DC9B31;" href="#" onclick="document.setLang{{ lang.1 }}.submit();return false;">{{ lang.1 }}</a>
+                </form>
+            </li>
+            {% endfor %}
+        </ul>
+    </li>
+</ul>
+{% endblock lang_selector %}
+
+
 {% block contents %}
 
 <div class="hero-unit">
