Small Correction, added favicon

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>{% block title %}Encuesta{% endblock %}</title>
     {% load staticfiles %}
+    <link rel="shortcut icon" href={% static "images/favicon.ico" %}>
     <link rel="stylesheet" href={% static "css/bootstrap.css" %} type="text/css">
     <link rel="stylesheet" href={% static "css/changes.css" %} type="text/css">
     <style type="text/css">
