--- a/main/templates/poll.html
+++ b/main/templates/poll.html
@@ -8,7 +8,7 @@
 <ul class="nav pull-right">
     <li class="dropdown">
         <a style="color: #DC9B31;" href="#" class="dropdown-toggle" data-toggle="dropdown">
-            {% trans "Idioma" %} <b class="caret"></b>
+            {% trans "Change Language" %} <b class="caret"></b>
         </a>
         <ul class="dropdown-menu">
             {% for lang in LANGUAGES %}
