--- a/main/templates/thanks.html
+++ b/main/templates/thanks.html
@@ -27,7 +27,7 @@
                     </form>
                 </li>
                 <li class="spaced">
-                    {% trans "Te puedes subscribir a la cuenta de twitter @psidium_project y asi mantendrás el control de tu comunicación con nosotros. De nuevo, sólo utilizaremos esta cuenta para anunciar el lanzamiento de nuestro proyecto: 0% Spam." %}
+                    {% trans "Te puedes subscribir a la cuenta de twitter "%}<a href="https://twitter.com/psidium_project">@psidium_project</a>{% trans " y asi mantendrás el control de tu comunicación con nosotros. De nuevo, sólo utilizaremos esta cuenta para anunciar el lanzamiento de nuestro proyecto: 0% Spam." %}
                 </li>
                 <li class="spaced">
                     {% trans "Puedes añadir la página " %}
